--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,7 +41,7 @@ android {
     applicationVariants.all { variant ->
         buildConfigField("String", "BASE_URL", "\"https://api.themoviedb.org/3/\"")
         buildConfigField("String", "ORIGINAL_IMAGE_URL", "\"https://image.tmdb.org/t/p/original\"")
-        buildConfigField("String", "API_KEY", "\"b19cf405bb450f0c5122b15e190b79cc\"")
+        buildConfigField("String", "API_KEY", "\"<API_KEY_VALUE>\"")
     }
 //
     compileOptions {
