--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,18 +30,21 @@ android {
             }
         }
     }
-//
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-//
+
     applicationVariants.all { variant ->
+        def localProperties = new Properties()
+        localProperties.load(new FileInputStream(rootProject.file("local.properties")))
+
         buildConfigField("String", "BASE_URL", "\"https://api.themoviedb.org/3/\"")
         buildConfigField("String", "ORIGINAL_IMAGE_URL", "\"https://image.tmdb.org/t/p/original\"")
-        buildConfigField("String", "API_KEY", "\"b19cf405bb450f0c5122b15e190b79cc\"")
+        buildConfigField("String", "API_KEY", "\"" + localProperties['api_key'] + "\"")
     }
 //
     compileOptions {
